--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>WhatsURL</title>
+<style>
+body{
+  text-algin:center;
+}
+.btn{
+  background-color: #3498db;
+  padding: 12px;
+  color: #FFF;
+  border-radius: 2px;
+}
+</style>
+</head>
 <body>
-<h1>Testing Send a Massage To WhatsApp Using Custom URL</h1>
-<a href="whatsapp://send?text=Hello%20World!">Hello, world!</a>
+<h3>Testing Send a Massage To WhatsApp Using Custom URL</h3>
+<a class="btn" href="whatsapp://send?text=Hello%20World!">Hello, World!</a>
 </body>
 </html>
